--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@aws-sdk/client-s3": "^3.383.0",
     "@hookform/resolvers": "^3.1.1",
     "@juggle/resize-observer": "^3.4.0",
+    "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-collapsible": "^1.0.3",
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
@@ -74,6 +75,7 @@
     "eslint": "^8.46.0",
     "eslint-config-prettier": "^8.10.0",
     "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react": "^7.33.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
@@ -101,6 +103,6 @@
   "lint-staged": {
     "*.{ts,tsx}": "eslint --cache --fix",
     "*.css": "stylelint --fix",
-    "*.{js,css,md}": "prettier --write"
+    "*.{cjs,js,md,ts,tsx,json}": "prettier --write"
   }
 }
