--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   "type": "module",
   "packageManager": "pnpm@8.6.0",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --port=3000",
     "build": "tsc && vite build",
     "lint": "eslint --cache --fix src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "format": "prettier --write \"src/**/*.{ts,tsx}\"",
-    "preview": "vite preview",
+    "preview": "vite preview --port=3000",
     "generate": "plop",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
