--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@aws-sdk/client-s3": "^3.383.0",
     "@hookform/resolvers": "^3.1.1",
     "@juggle/resize-observer": "^3.4.0",
+    "@radix-ui/react-avatar": "^1.0.3",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-collapsible": "^1.0.3",
     "@radix-ui/react-dialog": "^1.0.4",
@@ -37,6 +38,7 @@
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
     "jotai": "^2.2.3",
+    "jwt-decode": "^3.1.2",
     "katex": "^0.16.8",
     "lucide-react": "^0.263.1",
     "nanoid": "^4.0.2",
@@ -64,6 +66,7 @@
     "@swc-jotai/react-refresh": "^0.0.8",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^14.0.0",
+    "@types/google.accounts": "^0.0.8",
     "@types/katex": "^0.16.2",
     "@types/react": "^18.2.18",
     "@types/react-dom": "^18.2.7",
