--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "packageManager": "pnpm@8.6.0",
   "scripts": {
     "dev": "vite --port=3000",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "lint": "eslint --cache --fix src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "format": "prettier --write \"src/**/*.{ts,tsx}\"",
     "preview": "vite preview --port=3000",
